fix form values, and spacing for services page

--- a/public/assets/sass/projects.scss
+++ b/public/assets/sass/projects.scss
@@ -112,7 +112,7 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #sbsr-2289 {
-        padding: var(--sectionPadding);
+        padding-top: 8rem;
         overflow: hidden;
 
         .cs-container {
